tests/cases/should_fail/literals/unclosed_char_literal.stderr
error: invalid character literal `a`, character literals may only contain one codepoint
 --> $DIR/unclosed_char_literal.hash:1:1
1 |   'a
  |   ^^^ here
